--- a/flower.html
+++ b/flower.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="flowers.png" type="image/x-icon">
-    <title>KCG 4 - KECEEE BADAI </title>
+    <title>Kado buat kamu</title>
 </head>
 <body class="container">
   <div class="night"></div>
@@ -25,10 +25,7 @@
    </div>
    <div class="twinkling-elements"></div>
   <div class="stars"></div>
-  <div class="romantic-message-container">
-    <div class="verse-reference">Kolose 2:7 ✨💖</div>
-    <div class="verse-content">"Hendaklah kamu berakar di dalam Dia dan dibangun di atas Dia, hendaklah kamu bertambah teguh dalam iman yang telah diajarkan kepadamu, dan hendaklah hatimu melimpah dengan syukur." ✨💖</div>
-  </div>
+  <div class="romantic-message">Kamu adalah bintang di malam hari, Clara! ✨💖</div>
 
   <div class="image-gallery left">
       <div class="scroll-container">
@@ -59,13 +56,7 @@
     <img class="modal-content" id="modalImage">
     <div id="imageText" class="modal-text"></div>
   </div>
-  <div class="flowers" style="display: block !important; visibility: visible !important; opacity: 1 !important;">
-      <!-- Simple static flowers for testing -->
-      <div style="position: absolute; bottom: 50px; left: 20%; width: 50px; height: 50px; background: pink; border-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important;"></div>
-      <div style="position: absolute; bottom: 50px; left: 40%; width: 50px; height: 50px; background: lightblue; border-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important;"></div>
-      <div style="position: absolute; bottom: 50px; left: 60%; width: 50px; height: 50px; background: lightgreen; border-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important;"></div>
-      <div style="position: absolute; bottom: 50px; left: 80%; width: 50px; height: 50px; background: yellow; border-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important;"></div>
-
+  <div class="flowers">
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
           <div class="flower__leaf flower__leaf--1"></div>
