--- a/flower.html
+++ b/flower.html
@@ -60,6 +60,25 @@
     <div id="imageText" class="modal-text"></div>
   </div>
   <div class="flowers" style="display: block !important; visibility: visible !important; opacity: 1 !important;">
+      <!-- Simple visible flowers -->
+      <div style="position: absolute; bottom: 100px; left: 10%; width: 80px; height: 120px; background: linear-gradient(to top, #54b8aa, #a7ffee); border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 10;"></div>
+      <div style="position: absolute; bottom: 80px; left: 30%; width: 60px; height: 100px; background: linear-gradient(to top, #ff6b9d, #ffb3ba); border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 10;"></div>
+      <div style="position: absolute; bottom: 120px; left: 50%; width: 70px; height: 110px; background: linear-gradient(to top, #dda0dd, #98d8c8); border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 10;"></div>
+      <div style="position: absolute; bottom: 90px; left: 70%; width: 65px; height: 105px; background: linear-gradient(to top, #ffeaa7, #f7dc6f); border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 10;"></div>
+
+      <!-- Simple stems -->
+      <div style="position: absolute; bottom: 0; left: 10%; width: 4px; height: 100px; background: linear-gradient(to top, #14757a, #39c6d6); display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 9;"></div>
+      <div style="position: absolute; bottom: 0; left: 30%; width: 4px; height: 80px; background: linear-gradient(to top, #14757a, #39c6d6); display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 9;"></div>
+      <div style="position: absolute; bottom: 0; left: 50%; width: 4px; height: 120px; background: linear-gradient(to top, #14757a, #39c6d6); display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 9;"></div>
+      <div style="position: absolute; bottom: 0; left: 70%; width: 4px; height: 90px; background: linear-gradient(to top, #14757a, #39c6d6); display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 9;"></div>
+
+      <!-- Simple grass -->
+      <div style="position: absolute; bottom: 0; left: 5%; width: 20px; height: 60px; background: linear-gradient(to top, transparent, #159faa); border-top-left-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 8;"></div>
+      <div style="position: absolute; bottom: 0; left: 25%; width: 18px; height: 55px; background: linear-gradient(to top, transparent, #159faa); border-top-left-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 8;"></div>
+      <div style="position: absolute; bottom: 0; left: 45%; width: 22px; height: 65px; background: linear-gradient(to top, transparent, #159faa); border-top-left-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 8;"></div>
+      <div style="position: absolute; bottom: 0; left: 65%; width: 19px; height: 58px; background: linear-gradient(to top, transparent, #159faa); border-top-left-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 8;"></div>
+      <div style="position: absolute; bottom: 0; left: 85%; width: 21px; height: 62px; background: linear-gradient(to top, transparent, #159faa); border-top-left-radius: 50%; display: block !important; visibility: visible !important; opacity: 1 !important; z-index: 8;"></div>
+
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
           <div class="flower__leaf flower__leaf--1"></div>
